--- a/config-consumer-prod.yml
+++ b/config-consumer-prod.yml
@@ -2,4 +2,4 @@ info:
   profile: prod
 
 name: Znn-prod
-words: this is prod config file update again 2021-12-23 19：18：00
+words: this is prod config file update again 2021-12-24 11:01:00
